--- a/src/components/card4components/card4.css
+++ b/src/components/card4components/card4.css
@@ -14,10 +14,11 @@
     color: white;
     padding: 20px;
     width: 230px;
-    height: 400px; 
+    height: 380px; 
     text-align: justify;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
     position: relative;
+    border-radius: 5px;
   }
   
   .fruits-card h2 {
@@ -32,18 +33,17 @@
   }
   
   .fruits-card img {
-    width: 120px;
-    height: 120px;
+    width: 160px;
     border-radius: 10px;
-    /* margin: 50px 0; */
     margin-bottom: 30px;
     margin-top: 50px;
   }
   
   .fruits-card p {
     font-size: 16px;
-    line-height: 2.2;
+    line-height: 1.5;
     text-align: justify;
+
   }
 
   @media screen and (max-width: 450px) {
