--- a/src/view/Blog/Blog.css
+++ b/src/view/Blog/Blog.css
@@ -46,11 +46,13 @@
     margin: 0;
     font-size: 24px;
     font-weight: bold;
+    color: #ffffff;
 }
 
 .blog-content p {
     margin: 10px 0;
     font-size: 16px;
+    color: #ffffff;
 }
 
 .read-more-btn {
