--- a/src/view/Blog/Blog.css
+++ b/src/view/Blog/Blog.css
@@ -96,3 +96,30 @@
    
     
 }
+
+@media (max-width: 768px) {
+    /* body{
+    background-color: rgb(175, 233, 175);
+} */
+.blog-page-header{
+    width: 90%;
+    /* border: 5px solid green; */
+    display: flex;
+    margin-top: 30px;
+}
+.blog-card {
+    width: 360px;
+    height: 400px;
+}
+
+.small-blog-cards{
+    display: flex;
+    margin-top: 20px;
+    flex-direction: column;
+    /* justify-content: ; */
+    gap: 30px;
+    /* border: 3px solid gray; */
+    width: 100%;
+    padding-right: 0px;
+}
+}
