responsiveness added to the cart and the card2

--- a/src/components/BuynowButton/Buynow.css
+++ b/src/components/BuynowButton/Buynow.css
@@ -12,7 +12,14 @@
     font-size: 20px;
    
 }
-
+.quantity-btn-container{
+    display: flex;
+  gap: 20px;
+  align-items: center;
+  border: 1px solid gray;
+  border-radius: 5px;
+  padding: 5px 10px;
+}
 
 @media screen and (max-width: 450px) {
     .buynow-button-component {
@@ -23,7 +30,15 @@
         font-size: 15px;
        
     }
-    
+    .quantity-btn-container{
+        display: flex;
+      gap: 20px;
+      align-items: center;
+      border: 1px solid gray;
+      border-radius: 5px;
+      
+      padding: 2px 7px;
+    }
 }                                
 @media screen and (min-width: 450px) and (max-width: 753px) {
     .buynow-button-component {
@@ -31,6 +46,6 @@
         font-size: 14px;
     }
 }
-@media screen and (min-width: 769px) and (max-width: 992px) {}
-@media screen and (min-width: 993px) and (max-width: 1200px) {}
+@media screen and (min-width: 753px) and (max-width: 992px) {}
+@media screen and (min-width: 992px) and (max-width: 1200px) {}
 @media screen and (min-width: 1201px){}
