--- a/src/components/CartComponent/CardC.css
+++ b/src/components/CartComponent/CardC.css
@@ -175,6 +175,7 @@ border-radius: 8px;
     height: 80px;
     width: 90%;
     padding: 5px;
+    
   }
 .CardC-card-div1{
   width: 50%;
@@ -182,7 +183,9 @@ border-radius: 8px;
   .CardC-card-div1 img {
     height: 80px;
   }
-
+  .CardC-card-div2{
+    margin-top: 0px;
+  }
   .CardC-card-div2 h1 {
     font-size: 18px;
   }
