--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -153,7 +153,7 @@
     }
 
     .footer-li {
-        margin: 10px;
+        margin: 5px 10px;
         font-size: 14px;
     }
 
@@ -169,19 +169,57 @@
 
 @media (max-width: 480px) {
 
+    .footer-logo {  
+        height: 50px;
+        margin: 5px;
+    }
+    
+    .footer-para {
+        margin-top: 0px;
+        font-size: 14px;
+        line-height: 1.3;
+        color: #aaa;
+    }
+
     .footer-heading {
         font-size: 16px;
+        margin-bottom: 0px;
+        
+    }
+
+    .footer-li-container{
+        gap: 0px;
+        margin-top: 3px;
     }
 
     .footer-li, .footer-link {
         font-size: 14px;
     }
 
+    
+    .footer-contact-list {
+        margin-top: 3px;
+    }
+    
+    .footer-contact-item {
+        display: flex;
+        margin-bottom: 2px;
+        margin-left: 30px;
+    }
+
     .footer-img {
-        width: 20px;
+        width: 25px;
     }
 
     .footer-copyright {
         font-size: 12px;
+    }
+    .footer-Agro, .footer-services, .footer-links, .footer-contact, .footer-follow{
+        margin: 10px 5px;
+    }
+    ..footer-bottom {
+        margin: 0% 5%;
+        background-color: #b6c0b8;
+        flex-wrap: wrap;
     }
 }
