--- a/src/view/Profile/profile.css
+++ b/src/view/Profile/profile.css
@@ -4,6 +4,7 @@
     align-items: flex-start;
     height: 100vh;
     padding: 20px;
+    box-shadow: 4px 4px 15px rgba(38, 65, 52, 1);
   }
   
   .profile-user-header {
@@ -11,7 +12,7 @@
     margin-right: 20px;
     
   }
-  .profile-user-header h2{
+  .profile-user-header h2 h3{
     color:rgb(3, 66, 40);
   }
   .profile-user-icon {
